# property_friends_real_estate_case

./: .bandit.yml  .env.example  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  luigi.toml  pyproject.toml
.github/workflows/: ci.yaml
app/: main.py
app/api/routes/: api.py  predictor.py  trainer_runs.py
app/core/: config.py  errors.py  events.py  logging.py  monitoring.py  paginator.py
app/core/middleware/: api_key_auth.py  api_key_middleware.py
app/models/: prediction.py  train_runs.py
app/services/: predict.py
assets/: map.html
challenge/: Property-Friends-basic-model copy.ipynb  Property-Friends-basic-model.ipynb  pyproject.toml
config/: .flake8  .pylintrc  mypy.ini
ml/: Makefile
ml/data/examples/: example.json
ml/data/raw/: test.csv.example  train.csv.example
ml/pipelines/: build_features.py  db_init.sh  luigi_tasks.py  make_dataset.py  pipeline_config.yml  train_model.py  utils.py
notebooks/: Property-Friends-basic-model-fixed.ipynb
src/: app_diagram.py  diagram.py  ml_diagram.py
tests/: test_health.py  test_name.py  test_pagination_behavior.py  test_predict.py  test_predict_logs.py
