[tool.poetry]
name = "property-friends-real-estate-case"
version = "0.1.0"
description = "Estimate property valuations"
authors = ["Iván González <ivan.gonzalez.prz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
category-encoders = "^2.6.3"
jupyter = "^1.0.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
cookiecutter = "^2.5.0"



[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
bandit = "^1.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
